@@ -5,15 +5,10 @@
 
 
 
-- im_csv2vips() gets confused by quotes and commas, eg.
-
-	NP_001121179.1,"serine proteinase inhibitor, clade A, member ",ITPNLAEFAFSLYR,0.95588235294118,0.96176470588235, ...
-
-
-
-
 - add vips_init_argv() which processes argc/argv for you? handy for tiny
   progs, perhaps
+
+- add vips_shutdown()? unload plugins, drop cache etc.
 
 
 
